--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,12 @@
 ﻿/*General CSS*/
+
 body {
-	background-color: #FFCC66;
+	background-color:#fff7e6;
 	margin: 0;
 	padding: 0;
+}
+body,html{
+	height: 100%;
 }
 nav {
 	display: flex;
@@ -21,6 +25,8 @@ nav {
 	padding-top: 0px;
 	z-index: 1;
 	transition: 0.5s;
+	border-right:thin black ridge;
+
 }
 .cSidebar a {
 	color: white;
@@ -36,13 +42,14 @@ nav {
 
 .openButton {
 	padding: 22px 35px;
-	background-color: transparent;
 	color: black;
 	font-size: 30px;
 	border: none;
 	outline: none;
 	transition:0.3s;
 	border-radius:1rem;
+	background-color:transparent;
+
 }
 
 #sidebar a:hover {
@@ -52,13 +59,14 @@ nav {
 }
 .openButton:hover {
 		cursor: pointer;
+		background-color:#CC6600;
 
 }
 
 .openButton:active {
-	background-color:#CC6600;
+	
 }
-/*ADDED - CSS for sidebar recipe options. Just made them smaller and more indented than the rest of the options on the sidebar */
+/*CSS for sidebar recipe options. Just made them smaller and more indented than the rest of the options on the sidebar */
 #recipeOpt a{
 	font-size:25px;
 	padding:13px 8px 13px 60px;
@@ -105,6 +113,190 @@ nav {
 	background-color:#CC6600;
 }
 
+/*CSS for Sign in Page*/
+#signInForm{
+    width:350px;
+	margin:4% auto;
+	padding:15px;
+	background-color:#FF9933;
+	border-radius:1rem;
+	border:thin black ridge;
+}
+
+#signInFormHeader{
+	text-align:center;
+	margin-bottom:20px;
+}
+#formButton{
+	margin:10px 0;;
+    padding:10px 25px;
+    background-color:transparent;
+    border:thin black solid;
+    font-size:15px;
+    color:black;
+}
+#formButton:hover{
+	background-color: #CC6600;	
+	cursor: pointer
+}
+#formLogo{
+	width:89.25px;
+	height:100%;
+}
+
+a{
+	color:#FF3300
+}
+a:hover{
+	color:#993300
+}
+
+#signInBackground{
+	background-image:url('pastaBackground.jpg');
+	background-size:cover;
+}
+/*CSS for new recipe form page*/
+
+.box1{
+	width:96%;
+	height:115px;
+	background-color:red;
+	margin:0 auto;
+	margin-top:30px;
+	display:flex;
+	background-color:#FFCC66;
+	border-radius: 1rem 1rem 0 0;
+	border-top:thin black solid;
+	border-right:thin black solid;
+	border-left:thin black solid;
+
+}
+.box2{
+	display:flex;
+	width:96%;
+	height:600px;
+	background-color:#FFCC66;
+	margin:0 auto;
+	border-radius: 0 0 1rem 1rem;
+	border-bottom:thin black solid;
+	border-left:thin black solid;
+	border-right:thin black solid;
+
+
+}
+.box3{
+	width:20%;
+}
+.box4{
+	width:80%;
+	display:flex;
+	justify-content:center;
+
+}
+.bigBox{
+	width:100%;
+	height:30%;
+	display:flex;
+	align-items:center;
+	justify-content:center;
+
+}
+.bigBoxBottom{
+	width:100%;
+	height:30%;
+	display:flex;
+	justify-content:center;
+
+
+}
+
+.littleBox{
+	width:100%;
+	height:20%;
+	display:flex;
+	align-items:center;
+	justify-content:center;
+
+}
+.categoryArea{
+	margin:auto;
+	font-size:large;
+	padding:0 20px;
+	
+}
+.nameArea{
+	margin: auto;
+	font-size:large;
+	padding:0 50px;
+	text-align:center;
+
+}
+.rButtons{
+	margin:auto;
+	padding:10px 25px;
+
+}
+.recipeButton{
+	margin:auto 1%;
+    background-color:transparent;
+   	padding:10px 30px;
+
+    border:thin black solid;
+    font-size:large;
+
+}
+#inputRecipeName{
+	height:25px;
+	width:100%;
+	font-size: 20px;
+
+}
+#cTime, #numServings, #rInstructions{
+	font-size:15px;
+}
+
+#inputCategory {
+	font:inherit;
+	font-size: 25px;
+}
+
+#formTitle{
+	padding: 5px 30px;
+	margin:auto 3%;
+	text-align:center;
+	border:thin black solid;
+	background-color:#fff7e6;
+	border-radius:1rem;
+	
+}
+#sectionUpload, #sectionUploadBottom{
+	width: 70%;
+    height: 60px;
+    margin: 10px;
+    padding:5px;
+    font-size:large;
+}
+#sectionUploadBottom{
+	height:100%;
+}
+#ctime{
+	width:100%;
+}
+.bigBoxRight{
+	width: 90%;
+    height: 70%;
+    margin: 10px;
+    padding:5px;
+    font-size:large;
+}
+#rInstructions{
+	width:100%;
+}
+.recipeButton:hover{
+	cursor: pointer;
+	background-color:#CC6600;
+
+}
 /*CSS of footer*/
 
 footer{
